changes to index, nonfiction, contact, and css pages

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   
 <div class="jumbotron">
   <div class="container text-right">
-<button class="btn-lg text-light bg-info"><h2>Bestsellers<br> of the<br> late 1960s</h2></button>
+<button class="btn-lg text-light bg-info"><h2>Bestsellers of the late 1960s</h2></button>
     
 </div>   <!--end of jumbotron container -->
 </div> <!-- end of jumbotron   -->
@@ -50,7 +50,7 @@
 </div>
 
 <div class="container forms">
-<p>This site will be updated with information on other yearly bestseller lists. Would you like to receive an email to notify you of those changes?</p>
+<p>Would you like to receive an email to notify you of any changes made to this website?</p>
 
   
 <div class="radio">
@@ -89,6 +89,13 @@
   <h2>Thank you!</h2>
 </div>
 
+ <hr> 
+  <div class="container">
+  <div class="footer text-center">
+        <p>"Bestsellers of the late 1960s" was created by edithb, a student in the New York Public Library's TechConnect Project Code Phase II program.</p> 
+  </div>
+
+   
    
   
   </div><!--end of container forms-->
